[package]
name = "duplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.12", features = [
    "tokio-util",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7.7", features = ["codec", "full"] }
pin-project = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "*"
